# ivo

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.yaml  ecosystem.config.js  pyproject.toml
.github/agents/: chat.agent.md
.github/skills/: attachments.md  core-protocol.md  humanize.md  memory-maintenance.md  meta.yaml  personality.md  telegram-style.md  voice-style.md
.github/workflows/: ci.yml
docs/: openapi.json
ivo/: __init__.py  __main__.py  agents.py  app.py  config.py  memory.py  orchestrator.py  skills.py
ivo/adapters/: __init__.py  base.py  copilot.py  ollama.py
ivo/api/: server.py
ivo/bot/: __init__.py  commands.py  handlers.py  images.py  poller.py  transcribe.py  voice.py
ivo/session/: __init__.py  store.py
ivo/utils/: logging.py
scripts/: install.sh
tests/: test_agents.py  test_api.py  test_config.py  test_images.py  test_memory.py  test_ollama_via_copilot.py  test_session_store.py  test_skills.py  test_workspace_shortcuts.py
